kubernetes/gke/06-web.yaml
# Contributors:
# - Ahmet 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: slideai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.git.chalmers.se/courses/dit826/2025/team4/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /models
              name: shared-storage
              subPath: models
            - mountPath: /data
              name: database-storage  # Separate volume for SQLite
            - mountPath: /images
              name: shared-storage
              subPath: images
      volumes:
        - name: shared-storage
          nfs:
            server: nfs-server-service.slideai.svc.cluster.local
            path: /
        - name: database-storage
          nfs:
            server: nfs-server-service.slideai.svc.cluster.local
            path: /data
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: slideai
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
